--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -15,6 +15,8 @@ eureka:
     service-url: 
       default-zone: http://localhost:8761/eureka
   server:
-    wait-time-in-ms-when-sync-empty: 0      
+    wait-time-in-ms-when-sync-empty: 0  
+  instance:
+    hostname: localhost    
       
 
