--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -1,22 +1,12 @@
-#Server configuration
+  
 server:
   port: 8761
 
-#Spring configuration
-#spring:
-  #application:
-    #name: eureka-server
-
-#Eureka configuration
 eureka:
   client:
-    register-with-eureka: false
-    fetch-registry: false
-    service-url: 
-      default-zone: http://localhost:8761/eureka
-  server:
-    wait-time-in-ms-when-sync-empty: 0  
-  instance:
-    hostname: localhost    
-      
+    #telling the server not to register himself in the service registry
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
 
