--- a/zuul-server.yml
+++ b/zuul-server.yml
@@ -6,7 +6,7 @@ zuul:
     servicio-empleados:
       path: /empleados/** #path that will be intercepted
       serviceId: servicio-empleados
-eureka:
-  client: 
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+#eureka:
+  #client: 
+    #serviceUrl:
+      #defaultZone: http://localhost:8761/eureka
